# raylib-synth

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  build-web.sh  build.ninja  build.sh  cmake_install.cmake  compile_commands.json  index.html  index.js  index.wasm  shell.html
include/: core.h  graphics.h  rope.h  scales.h  synth.h  utils.h
scripts/: build-and-deploy.sh  build-web.sh  build.sh  deploy.sh  local-build-deploy.sh  local-deploy.sh  setup_miniaudio.sh
src/: core.c  graphics.c  main.c  rope.c  synth.c  utils.c
